# matahub

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  2025_11_26_1655-7295a9595bf2_add_dataset_status_and_yaml_path.py  2025_11_26_1905-e866c3008a65_remove_storage_path_column.py  2025_11_29_1300-cf1c10905a8f_add_is_system_and_nullable_dataset_to_.py  2025_11_29_1433-8bf5756081bc_add_validating_status_and_validation_.py  2025_11_29_1700-fix_modelstatus_enum.py  2025_11_29_rbac.py  2025_11_30_add_detection_progress.py  2025_12_01_1449-b0fb386dfd9b_add_export_jobs_table.py  2025_12_01_1807-2fe7d1bbf3b3_add_frame_timestamp_to_detection_results.py  2025_12_01_2000_add_detection_sessions.py  2025_12_01_2100_add_project_session_forms.py  2025_12_02_1834-3553e0d1f869_add_task_type_to_models.py  2025_12_03_add_classification_fields_to_detection_results.py  2025_12_04_1831-b67ecc969708_add_error_message_to_session_exports.py  2025_12_05_1147-3d47b60e41e8_add_workflow_tables.py  2025_12_11_2006-c66d6555a5d8_rename_detection_to_prediction.py  2025_12_18_add_user_files.py  2025_12_20_1244-d0077ad8bfac_add_app_settings_table_for_persistent_.py  2025_12_20_1606-543e55c26b39_add_api_keys_table.py  2025_12_20_1833-acd4d88a1c50_add_workflow_api_features.py  2025_12_20_2129-38216d8814de_add_api_to_workflow_trigger_enum.py  (+15 more)
backend/app/: __init__.py  config.py  db.py  main.py
backend/docker/: .dockerignore  Dockerfile
(+259 files in other folders)
