[project]
name = "matahub-ce"
version = "0.1.0"
description = "Matahub Community Edition"
authors = [{name="Datamata"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy"
]
collect_ignore = [
    "docker",
    "tests",
    "*.md",
    "*.txt",
    "*.pyc",
    "*.log",
    "*.env",
    "__pycache__",
    ".venv",
    "venv",
    "env"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"