[project]
name = "matahub"
version = "0.0.2"
description = "Matahub Community Edition"
authors = [{name="Datamata"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]